Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-3707

[C++] test failure with zstd 1.3.7

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 0.11.0
    • 0.12.0
    • C++

    Description

      We may pass a NULL output pointer to Codec::Decompress when the output size is 0, but recent zstd versions don't like that.

      This was already identified (and patched on the side) by one of our packagers:
      https://github.com/NixOS/nixpkgs/pull/48928

      Attachments

        Issue Links

          Activity

            People

              apitrou Antoine Pitrou
              apitrou Antoine Pitrou
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 1h 40m
                  1h 40m