ARROW-3707: [C++] Fix test regression with zstd 1.3.7

Upstream issue: https://github.com/facebook/zstd/issues/1385

Author: Antoine Pitrou <antoine@python.org>

Closes #2909 from pitrou/ARROW-3707-zstd-null-pointer and squashes the following commits:

9fb06761 <Antoine Pitrou> Use cmake to build zstd
8a2488df <Antoine Pitrou> ARROW-3707:  Fix test regression with zstd 1.3.7