ci/cpp-msvc-build-main.bat
@@ -19,7 +19,7 @@
 @rem (i.e. for usual configurations)
 
 set ARROW_HOME=%CONDA_PREFIX%\Library
-set CMAKE_ARGS=
+set CMAKE_ARGS=-DARROW_VERBOSE_THIRDPARTY_BUILD=OFF
 
 if "%JOB%" == "Toolchain" (
     set CMAKE_ARGS=%CMAKE_ARGS% -DARROW_WITH_BZ2=ON
